// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`activity/ActivityItemIcon Default smoke-test 1`] = `
<svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-kvy912-MuiSvgIcon-root"
     focusable="false"
     aria-hidden="true"
     viewbox="0 0 24 24"
     data-testid="ErrorOutlinedIcon"
>
  <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-2h2zm0-4h-2V7h2z">
  </path>
</svg>
`;

exports[`activity/ActivityItemIcon Error smoke-test 1`] = `
<svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1rmm1fn-MuiSvgIcon-root"
     focusable="false"
     aria-hidden="true"
     viewbox="0 0 24 24"
     data-testid="ErrorOutlinedIcon"
>
  <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-2h2zm0-4h-2V7h2z">
  </path>
</svg>
`;

exports[`activity/ActivityItemIcon Info smoke-test 1`] = `
<svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-kvy912-MuiSvgIcon-root"
     focusable="false"
     aria-hidden="true"
     viewbox="0 0 24 24"
     data-testid="ErrorOutlinedIcon"
>
  <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-2h2zm0-4h-2V7h2z">
  </path>
</svg>
`;

exports[`activity/ActivityItemIcon Success smoke-test 1`] = `
<svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-md6zzs-MuiSvgIcon-root"
     focusable="false"
     aria-hidden="true"
     viewbox="0 0 24 24"
     data-testid="CheckCircleOutlinedIcon"
>
  <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8m4.59-12.42L10 14.17l-2.59-2.58L6 13l4 4 8-8z">
  </path>
</svg>
`;

exports[`activity/ActivityItemIcon Warning smoke-test 1`] = `
<svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-tye81v-MuiSvgIcon-root"
     focusable="false"
     aria-hidden="true"
     viewbox="0 0 24 24"
     data-testid="WarningAmberOutlinedIcon"
>
  <path d="M12 5.99 19.53 19H4.47zM12 2 1 21h22zm1 14h-2v2h2zm0-6h-2v4h2z">
  </path>
</svg>
`;
